--- a/trunk/SigmaUtil/SigmaUtil_vs2005.vcproj
+++ b/trunk/SigmaUtil/SigmaUtil_vs2005.vcproj
@@ -444,18 +444,6 @@
 				>
 			</File>
 			<File
-				RelativePath=".\SulParticleCounter.h"
-				>
-			</File>
-			<File
-				RelativePath=".\SulParticleCounterOnce.h"
-				>
-			</File>
-			<File
-				RelativePath=".\SulParticleEmitter.h"
-				>
-			</File>
-			<File
 				RelativePath=".\SulSigSlots.h"
 				>
 			</File>
@@ -542,294 +530,6 @@
 					RelativePath=".\SulSceneManagerXml.h"
 					>
 				</File>
-			</Filter>
-			<Filter
-				Name="Geoms"
-				>
-				<File
-					RelativePath=".\SulGeode.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeode.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeom.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeom.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomBarChart.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomBarChart.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomBillboardInstancing.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomBillboardInstancing.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomBoundingBox.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomBoundingBox.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomBox.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomBox.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomCone.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomCone.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomCrossQuadInstancing.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomCrossQuadInstancing.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomFrame.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomFrame.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomGrid.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomGrid.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomHeightField.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomHeightField.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomLaser.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomLaser.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomPlane.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomPlane.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomQuad.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomQuad.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomQuadTiles.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomQuadTiles.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomTriangle.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomTriangle.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomTriangleFan.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomTriangleFan.h"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomTriangleList.cpp"
-					>
-				</File>
-				<File
-					RelativePath=".\SulGeomTriangleList.h"
-					>
-				</File>
-				<Filter
-					Name="lines"
-					>
-					<File
-						RelativePath=".\SulGeodeLineStrip.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeodeLineStrip.h"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomLine.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomLine.h"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomLineList.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomLineList.h"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomLines.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomLines.h"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomLineStrip.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomLineStrip.h"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="crosshairs"
-					>
-					<File
-						RelativePath=".\SulGeodeCrosshairs.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeodeCrosshairs.h"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomCrosshairSimple.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomCrosshairSimple.h"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="circles"
-					>
-					<File
-						RelativePath=".\SulGeodeCircle.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeodeCircle.h"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomCircle.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomCircle.h"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="arrows"
-					>
-					<File
-						RelativePath=".\SulGeomArrow2D.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomArrow2D.h"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomArrow3D.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomArrow3D.h"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomAxis.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomAxis.h"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="tickmarks"
-					>
-					<File
-						RelativePath=".\SulGeomTickMarksHorizontal.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomTickMarksHorizontal.h"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="specials"
-					>
-					<File
-						RelativePath=".\SulGeomGriddedText.cpp"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomGriddedText.h"
-						>
-					</File>
-					<File
-						RelativePath=".\SulGeomGriddedTextUpdateCallback.h"
-						>
-					</File>
-				</Filter>
 			</Filter>
 			<Filter
 				Name="AnimationPaths"
@@ -2151,6 +1851,26 @@
 					>
 				</File>
 				<File
+					RelativePath=".\SulParticleCounter.h"
+					>
+				</File>
+				<File
+					RelativePath=".\SulParticleCounterOnce.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\SulParticleCounterOnce.h"
+					>
+				</File>
+				<File
+					RelativePath=".\SulParticleEmitter.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\SulParticleEmitter.h"
+					>
+				</File>
+				<File
 					RelativePath=".\SulParticleSystem.h"
 					>
 				</File>
@@ -2259,15 +1979,339 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="Objects"
+				>
+				<Filter
+					Name="Geoms"
+					>
+					<File
+						RelativePath=".\SulGeode.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeode.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeom.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeom.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomBarChart.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomBarChart.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomBillboardInstancing.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomBillboardInstancing.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomBoundingBox.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomBoundingBox.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomBox.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomBox.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomCone.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomCone.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomCrossQuadInstancing.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomCrossQuadInstancing.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomFrame.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomFrame.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomGrid.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomGrid.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomHeightField.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomHeightField.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomLaser.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomLaser.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomPlane.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomPlane.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomQuad.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomQuad.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomQuadTiles.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomQuadTiles.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomTriangle.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomTriangle.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomTriangleFan.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomTriangleFan.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomTriangleList.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomTriangleList.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="Cylinder"
+					>
+					<File
+						RelativePath=".\SulGeomCylinder.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomCylinder.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="Arrows"
+					>
+					<File
+						RelativePath=".\SulGeomArrow2D.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomArrow2D.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomArrow3D.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomArrow3D.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomAxis.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomAxis.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="Circles"
+					>
+					<File
+						RelativePath=".\SulGeodeCircle.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeodeCircle.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomCircle.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomCircle.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="Crosshairs"
+					>
+					<File
+						RelativePath=".\SulGeodeCrosshairs.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeodeCrosshairs.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomCrosshairSimple.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomCrosshairSimple.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="Lines"
+					>
+					<File
+						RelativePath=".\SulGeodeLineStrip.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeodeLineStrip.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomLine.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomLine.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomLineList.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomLineList.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomLines.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomLines.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomLineStrip.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomLineStrip.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="Specials"
+					>
+					<File
+						RelativePath=".\SulGeodeParachute.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeodeParachute.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomGriddedText.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomGriddedText.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomGriddedTextUpdateCallback.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="tickmarks"
+					>
+					<File
+						RelativePath=".\SulGeomTickMarksHorizontal.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomTickMarksHorizontal.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="Spheres"
+					>
+					<File
+						RelativePath=".\SulGeodeSphere.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeodeSphere.h"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomHemiSphere.cpp"
+						>
+					</File>
+					<File
+						RelativePath=".\SulGeomHemiSphere.h"
+						>
+					</File>
+				</Filter>
+			</Filter>
 		</Filter>
-		<File
-			RelativePath=".\SulParticleCounterOnce.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\SulParticleEmitter.cpp"
-			>
-		</File>
 	</Files>
 	<Globals>
 	</Globals>
